fixed sizing and formatting issues on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 
 body {
-  background-color: #F0F0F0; /* light gray or your desired color */
+  background-color: #f3f2f2; /* light gray or your desired color */
   margin: 0;                /* removes default spacing */
   padding: 0;
   /* optional: reset font */
